<resources>
    <string name="app_name">QQ</string>
    <string name="log">登录</string>
    <string name="question">无法登陆？</string>
    <string name="reg">新用户注册</string>
    <string name="info1">QQ号</string>
    <string name="info2">密码</string>
    <string name="sign_up_account">注册账号</string>
    <string name="sign_up_pwd">输入密码</string>
    <string name="sign_up_pwd_again">再次输入密码</string>
    <string name="sign_up_button">确定</string>
    <string name="msg">消息</string>
    <string name="contact">联系人</string>
    <string name="trends">动态</string>
    <string name="sendButton">发送</string>
    <string name="confirm">确定</string>
    <string name="quit">退出登录</string>
    <string name="delete_friend">删除好友</string>
    <string name="addContact">请输入要添加的好友的账号</string>
    <string name="title_activity_operator_interface2">OperatorInterface2Activity</string>
    <string name="title_activity_chat_person">ChatPersonActivity</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_test_pop_window">TestPopWindowActivity</string>
    <string name="network_anomalies">Network is not available, please check the network!</string>
    <string name="User_already_exists">User already existed!</string>
    <string name="registration_failed_without_permission">Registration failed, without permission!</string>
    <string name="illegal_user_name">Illegal user name</string>
    <string name="Registration_failed">Registration failed</string>
    <string-array name="emotions">
        <item>@drawable/emo1</item>
        <item>@drawable/emo2</item>
        <item>@drawable/emo3</item>
        <item>@drawable/emo4</item>
        <item>@drawable/emo5</item>
        <item>@drawable/emo6</item>
        <item>@drawable/emo7</item>
        <item>@drawable/emo8</item>
        <item>@drawable/emo9</item>
        <item>@drawable/emo10</item>
        <item>@drawable/emo11</item>
        <item>@drawable/emo12</item>
        <item>@drawable/emo13</item>
        <item>@drawable/emo14</item>
        <item>@drawable/emo15</item>
        <item>@drawable/emo16</item>
        <item>@drawable/emo17</item>
        <item>@drawable/emo18</item>
        <item>@drawable/emo19</item>
        <item>@drawable/emo20</item>
        <item>@drawable/emo21</item>
        <item>@drawable/emo22</item>
        <item>@drawable/emo23</item>
        <item>@drawable/emo24</item>
        <item>@drawable/emo25</item>
        <item>@drawable/emo26</item>
        <item>@drawable/emo27</item>
        <item>@drawable/emo28</item>
        <item>@drawable/emo29</item>
        <item>@drawable/emo30</item>
        <item>@drawable/emo31</item>
        <item>@drawable/emo32</item>
        <item>@drawable/emo33</item>
        <item>@drawable/emo34</item>
        <item>@drawable/emo35</item>
        <item>@drawable/emo36</item>
        <item>@drawable/emo37</item>
        <item>@drawable/emo38</item>
        <item>@drawable/emo39</item>
        <item>@drawable/emo40</item>
        <item>@drawable/emo41</item>
        <item>@drawable/emo42</item>
        <item>@drawable/emo43</item>
        <item>@drawable/emo44</item>
        <item>@drawable/emo45</item>
        <item>@drawable/emo46</item>
        <item>@drawable/emo47</item>
        <item>@drawable/emo48</item>
        <item>@drawable/emo49</item>
        <item>@drawable/emo50</item>
        <item>@drawable/emo51</item>
        <item>@drawable/emo52</item>
        <item>@drawable/emo53</item>
        <item>@drawable/emo54</item>
        <item>@drawable/emo55</item>
        <item>@drawable/emo56</item>
        <item>@drawable/emo57</item>
        <item>@drawable/emo58</item>
        <item>@drawable/emo59</item>
        <item>@drawable/emo60</item>
        <item>@drawable/emo61</item>
        <item>@drawable/emo62</item>
        <item>@drawable/emo63</item>
        <item>@drawable/emo64</item>
        <item>@drawable/emo65</item>
        <item>@drawable/emo66</item>
        <item>@drawable/emo67</item>
        <item>@drawable/emo68</item>
        <item>@drawable/emo69</item>
        <item>@drawable/emo70</item>
        <item>@drawable/emo71</item>
        <item>@drawable/emo72</item>
        <item>@drawable/emo73</item>
        <item>@drawable/emo74</item>
        <item>@drawable/emo75</item>
        <item>@drawable/emo76</item>
        <item>@drawable/emo77</item>
        <item>@drawable/emo78</item>
        <item>@drawable/emo79</item>
        <item>@drawable/emo80</item>
        <item>@drawable/emo81</item>
        <item>@drawable/emo82</item>
        <item>@drawable/emo83</item>
    </string-array>

</resources>
