<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tank1"/>

    <EditText
        android:id="@+id/sign_up_accout_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_account"
        android:singleLine="true" />

    <EditText
        android:id="@+id/sign_up_pwd_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_pwd"
        android:password="true"
        android:singleLine="true" />

    <EditText
        android:id="@+id/sign_up_pwd_again_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_up_pwd_again"
        android:password="true"
        android:singleLine="true" />

    <Button
        android:id="@+id/sign_up_button"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_button"/>
</LinearLayout>