<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <com.pkmmte.view.CircularImageView
            android:id="@+id/imageview1"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/feather"
            app:border="true"
            app:border_color="#EEEEEE"
            app:border_width="1dp"
            app:shadow="true" />

        <EditText
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:maxLength="10"
            android:singleLine="true"
            android:hint="@string/info1"
            android:background="@android:color/white" />

        <EditText
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:password="true"
            android:singleLine="true"
            android:hint="@string/info2"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/button"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:background="@drawable/shapebutton"
            android:text="@string/log"
            android:textColor="@android:color/white">
        </Button>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/question"
            android:maxLength="5"
            android:textColor="#00bbdd"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/reg"
            android:maxLength="5"
            android:textColor="#00bbdd"/>
    </RelativeLayout>
</LinearLayout>