<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray1"
    android:orientation="vertical">

    <com.pkmmte.view.CircularImageView
        android:id="@+id/imageview"
        android:layout_width="280px"
        android:layout_height="280px"
        android:src="@drawable/feather"
        app:border="true"
        app:border_color="#EEEEEE"
        app:border_width="1dp"
        app:shadow="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="120px"
        />


        <EditText
            android:layout_marginTop="35px"
            android:id="@+id/user_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:hint="@string/info1"
            android:maxLength="10"
            android:singleLine="true"
            android:textSize="40px"
            android:textColorHint="@color/gray2"
            android:paddingLeft="40px"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray1"></View>

        <EditText
            android:id="@+id/passwd_edittext"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/white"
            android:hint="@string/info2"
            android:password="true"
            android:paddingLeft="40px"
            android:textSize="40px"
            android:textColorHint="@color/gray2"
            android:singleLine="true" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/shapebutton"
            android:text="@string/log"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:textSize="50px"
            android:textColor="@android:color/white" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:maxLength="5"
            android:text="@string/question"
            android:textColor="#00bbdd"
            android:layout_marginLeft="40px"
            android:layout_marginBottom="40px"/>

        <TextView
            android:id="@+id/sign_up_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:maxLength="5"
            android:text="@string/reg"
            android:textColor="#00bbdd"
            android:layout_marginRight="40px"
            android:layout_marginBottom="40px"/>
    </RelativeLayout>
</LinearLayout>